competitions/genius_game_server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genius-games
  labels:
    app: genius-game-server
    environment: production
